# LLMHallucinationProbing

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/processed/: test.pt  train.pt  val.pt
docs/: Advanced_Optimization.md  Milestone.md  Phase4_From_Phase3_Development_Guide.md  Project_Plan.md  Proposal.md  Report.md  Report_ACL_zh.md  report.md  report_outline.md  对比结果.md
docs/milestone/: M1.md  M2.md
docs/outdated/: Advanced_Optimization.md  report_outline_zh.md
docs/revision/: Project_Plan_review_v1.md  Project_Plan_review_v10.md  Project_Plan_review_v11.md  Project_Plan_review_v12.md  Project_Plan_review_v13.md  Project_Plan_review_v14.md  Project_Plan_review_v15.md  Project_Plan_review_v2.md  Project_Plan_review_v3.md  Project_Plan_review_v4.md  Project_Plan_review_v5.md  Project_Plan_review_v6.md  Project_Plan_review_v7.md  Project_Plan_review_v8.md  Project_Plan_review_v9.md
experiments/results/: report_assets_manifest.md
report/: README.md  custom.bib  main.tex
scripts/: check_phase1.ps1  debug_nan.py  debug_nan2.py  diagnose_eager.py  print_results.py  quick_hidden_baseline.py  read_existing_results.py  run_ablation_only.py  run_phase2.py  run_phase2_simple.py  run_phase4_complete.py  run_phase4_eval.py  run_phase4_final.py  run_phase4_full.py  run_phase4_improved.py  run_phase4_quick.py  show_results.py
scripts/commands/: check_phase1.py  preprocess.py  status.py  test_gpu.py
scripts/report_assets/: generate_a6_analysis.py  generate_attention_cases.py  generate_ppl_distribution.py
scripts/run/: phase2.py  phase3.py  phase4.py
src/: config.py
src/analysis/: __init__.py  layer_analysis.py  phase4_analysis.py  token_analysis.py  visualization.py
src/data/: __init__.py  dataset.py  preprocessing.py
src/features/: anchor_extraction.py  attention.py  attention_outputs.py  attention_scores.py  hidden_states.py
src/methods/: __init__.py  advanced.py  phase4_attention.py  probability.py  saplma.py
src/models/: __init__.py  loader.py
src/utils/: feature_cache.py  metrics.py  reproducibility.py
tests/: conftest.py
tests/phase1/: test_config.py  test_data.py  test_model.py
tests/phase2/: __init__.py  conftest.py  test_hidden_states.py  test_probability.py  test_saplma.py
tests/phase3/: __init__.py  conftest.py  test_layer_analysis.py  test_token_analysis.py  test_visualization.py
tests/phase4/: __init__.py  conftest.py  test_advanced.py  test_anchor_extraction.py  test_attention.py  test_attention_debias.py  (+5 more)
(+29 files in other folders)
