[project]
name = "llm-hallucination-probing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes",
    "black>=26.3.1",
    "datasets>=4.8.5",
    "huggingface-hub>=1.14.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "mypy>=2.1.0",
    "numpy>=2.4.3",
    "pandas>=3.0.3",
    "peft>=0.19.1",
    "protobuf>=7.34.1",
    "pyyaml>=6.0.3",
    "ruff>=0.15.12",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "spacy>=3.8.14",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.0",
    "wandb>=0.26.1",
]

[tool.uv.sources]
bitsandbytes = { url = "https://github.com/jllllll/bitsandbytes-windows-webui/releases/download/wheels/bitsandbytes-0.41.1-py3-none-win_amd64.whl" }
