[project]
name = "llm-hallucination-probing"
version = "0.1.0"
description = "LLM Hallucination Probing — 利用大语言模型内部状态进行幻觉检测"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    # --- 深度学习框架 (CUDA 12.4) ---
    "torch>=2.4,<2.7",
    "torchvision>=0.19,<0.22",
    "torchaudio>=2.4,<2.7",

    # --- 模型加载与推理 ---
    "transformers>=4.44,<5.0",
    "accelerate>=1.0,<2.0",
    "peft>=0.14,<1.0",
    "sentencepiece>=0.2,<1.0",
    "protobuf>=5.0,<8.0",

    # --- 数据处理 ---
    "datasets>=3.0,<5.0",
    "numpy>=1.26,<2.3",
    "pandas>=2.0,<3.0",
    "huggingface-hub>=0.26,<1.0",

    # --- 机器学习与评估 ---
    "scikit-learn>=1.5,<1.8",
    "scipy>=1.10,<2.0",

    # --- 可视化 ---
    "matplotlib>=3.7,<3.10",
    "seaborn>=0.12,<0.14",

    # --- 工具 ---
    "tqdm>=4.64,<5.0",
    "pyyaml>=6.0,<7.0",

    # --- 可选: Subject token 分析 ---
    "spacy>=3.7,<4.0",

    # --- 可选: 实验跟踪 ---
    "wandb>=0.18,<1.0",

    # --- 开发工具 ---
    "ipykernel>=6.0,<8.0",
    "jupyter>=1.0,<2.0",
    "ipywidgets>=8.0,<9.0",
    "black>=24.0,<27.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.0,<2.0",

    # --- 测试 ---
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<7.0",
]

[tool.uv.sources]
# PyTorch CUDA 12.4 源
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
